<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_gap"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/string_prompt_address"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/string_prompt_email"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/string_prompt_password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:text="@string/string_prompt_login" />

    <TextView
        android:layout_marginTop="16dp"
        android:id="@+id/textView_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/string_signup"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"/>
</LinearLayout>