<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editText_dialog_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/string_prompt_email"
        android:inputType="textEmailAddress"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText_dialog_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_gap"
        android:backgroundTint="@color/colorPrimaryDark"
        android:hint="@string/string_prompt_password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <Button
        android:id="@+id/button_dialog_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAccent"
        android:text="@string/string_prompt_signup" />

</LinearLayout>